syntax = "proto3";

package golem.common;

import "golem/common/uuid.proto";

message AccountId {
  golem.common.UUID value = 1;
}
